@@ -515,7 +515,12 @@ module.exports = function (Server) {
 
         /* ustream.tv */
         us: function (id, callback) {
-            var m = id.match(/([\w-]+)/);
+            // 2013-09-17
+            // They couldn't fucking decide whether channels should
+            // be at http://www.ustream.tv/channel/foo or just
+            // http://www.ustream.tv/foo so they do both.
+            // [](/cleese)
+            var m = id.match(/([^\?&#]+)|(channel\/[^\?&#]+)/);
             if (m) {
                 id = m[1];
             } else {
