@@ -1,3 +1,7 @@
+Tue Sep 17 13:16 2013 CDT
+    * lib/get-info.js: Fix ustream for channels that have /channel/ in the
+      path.
+
 Fri Sep 13 10:10 2013 CDT
     * www/reset.html: Fix data.js dependency
     * lib/api.js: Fix ActionLog trying to record wrong data.  How long has
